Removed chevron modifier.

--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,7 @@
             Pull down to fetch items
           </div>
         </ons-list-item>
-        <ons-list-item modifier="chevron" class="item" ng-repeat="item in items">
+        <ons-list-item class="item" ng-repeat="item in items">
             <ons-row>
                 <ons-col width="80px">
                   <img ng-src="http://lorempixel.com/60/60/?{{item.rand}}" class="item-thum"></img>
