--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,12 @@
 
       });
     </script>
+
+    <style>
+      ons-list-item {
+        line-height: 22px;
+      }
+    </style>
   </head>
 
   <body>    
