--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
 
     <style>
       ons-list-item {
-        line-height: 22px;
+        line-height: 22px !important;
       }
     </style>
   </head>
