--- a/www/index.html
+++ b/www/index.html
@@ -69,7 +69,7 @@
 
       <ons-list>  
         <ons-list-item ng-show="items.length === 0">
-          <div style="margin: 15px; text-align: center; opacity: 0.75;">
+          <div class="info">
             Pull down to fetch items
           </div>
         </ons-list-item>
